--- a/Dockerfile.GM-tf-2.7
+++ b/Dockerfile.GM-tf-2.7
@@ -84,6 +84,7 @@ RUN curl -fSsL -O https://bootstrap.pypa.io/get-pip.py && \
 RUN python -m pip --no-cache-dir install \
     ipykernel \ 
     h5py \
+    Pillow \
     scipy \
     sklearn \
     pandas \
