--- a/Dockerfile.GM-tf-3.6
+++ b/Dockerfile.GM-tf-3.6
@@ -101,6 +101,7 @@ RUN python3.6 -m pip --no-cache-dir install \
     ipykernel \ 
     h5py \
     scipy \
+    Pillow \
     sklearn \
     pandas \
     numpy==1.14.5 \
