--- a/Dockerfile.GM-tf-3.6
+++ b/Dockerfile.GM-tf-3.6
@@ -52,6 +52,27 @@ ENV TZ=Asia/Jerusalem
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 
+#######################################
+#            Installing cmake         #
+#######################################
+
+RUN \
+    cd ~ && \
+    version=3.11 && \
+    build=3 && \
+    mkdir ~/temp && \
+    cd temp && \
+    wget https://cmake.org/files/v$version/cmake-$version.$build.tar.gz && \
+    tar -xzvf cmake-$version.$build.tar.gz && \
+    cd cmake-$version.$build && \
+    ./bootstrap && \
+    make -j4 && \
+    make install && \
+    cmake --version && \
+    cd ~ && \
+    rm -rf temp
+
+
 #################################################
 #     Python 3.6 installations for dev          #
 #################################################
